tests/typechecking/valid/let3.ml
let x =3 in 
let y =4 in
let z = 3  in 
let e=x+y+z in print_int e




