tests/typechecking/invalid/t.ml
let x = 3 in
let y = 4
in x + y 